fix alignment problems

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -12,12 +12,12 @@ body {
 }
 
 .content {
-  width: 1010px;
+  width: 960px;
+  padding: 10px;
   margin: 60px auto 0;
 }
 
 .card-field {
-  padding: 10px;
   height: 600px;
 }
 
@@ -35,7 +35,7 @@ body {
 }
 
 .card-column {
-  width: 320px;
+  width: 310px;
   margin: 5px;
   height: 500px;
   float: left;
